@@ -3,10 +3,11 @@
 <div class="main">
 
 <div class="content"><ul>
-	<li><em>Ubuntu One</em> is your personal cloud, providing 2 GB of essential storage (and more if you need it).</li>
-	<li>Use it to back up, store and sync your files, as well as share them with other Ubuntu One users.</li>
-	<li>Your Tomboy notes and Evolution contacts are synced automatically across all of your computers.</li>
-	<li>Integration with your Ubuntu desktop makes sharing files easy.</li>
+	<li>Shuffle between your laptop, netbook, and company desktop and find everything you need automatically synchronised. Your documents, your music, bookmarks, address book, and notes – everything goes where you go with <em>Ubuntu One</em>.</li>
+	<li>Want a safe home for your important files? All Ubuntu users get 2 GB of personal cloud storage for free (and more if you need it).</li>
+	<li>Share folders using your synchronised address book. Project collaboration has never been easier.</li>
+	<li><em>Ubuntu One Music Store</em> purchases are automatically stored in the cloud and synchronised across all of your computers.</li>
+	<li>Sign-up by launching the <em>Ubuntu One Preferences</em> application or going to <a href="http://one.ubuntu.com/">http://one.ubuntu.com/</a>.</li>
 </ul></div>
 
 </div>
